fix jwt security